# mxDB

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: python-wheels.yml
bench/workloads/: latest-read-workload.md
connectors/file_import/: import_csv.py
deploy/config/: featured.conf.example
deploy/docker/: Dockerfile
docs/: README.md  bitemporal-feature-engine-api-contracts.md  bitemporal-feature-engine-implementation-plan.md  bitemporal-feature-engine-spec.html  bitemporal-feature-engine-spec.md  definition-of-done.md  development-guide.md  implementation-backlog.md  known-limitations.md  operational-runbook.md  python-packaging.md
docs/adr/: 0001-product-boundary-and-query-model.md  0002-bitemporal-data-model-and-version-selection.md  0003-v1-node-architecture-shared-wal-local-partitions.md  0004-hybrid-storage-and-lock-free-latest-cache.md  0005-metadata-plane-sdk-boundary-arrow-interchange.md  0006-checkpointing-recovery-compaction-retention.md  0007-distributed-evolution-path-and-replication-model.md  README.md
engine/admin/: admin_service.cc  admin_service.h
engine/catalog/: metadata_store.cc  metadata_store.h
engine/checkpoint/: checkpoint_manager.cc  checkpoint_manager.h
engine/common/config/: config.cc  config.h
engine/common/crc32/: crc32.cc  crc32.h
engine/common/io/: file_ops.h
engine/common/logging/: logging.cc  logging.h
engine/common/process_lock/: data_dir_lock.cc  data_dir_lock.h
engine/common/status/: status.cc  status.h
engine/manifest/: manifest.cc  manifest.h
engine/recovery/: recovery_manager.cc  recovery_manager.h
engine/segment/: segment_store.cc  segment_store.h
engine/storage/: feature_engine.cc  feature_engine.h
engine/types/: types.h
engine/validation/: validator.cc  validator.h
engine/wal/: wal_reader.cc  wal_reader.h  wal_record.cc  wal_record.h  wal_writer.cc  wal_writer.h
proto/: admin.proto  common.proto  historical.proto  ingestion.proto  metadata.proto  serving.proto
sdk/python/: MANIFEST.in  README.md  pyproject.toml  setup.py
sdk/python/scripts/: build_featurectl_for_wheel.py  check_wheel_contents.py  install_windows_sqlite.py  prime_cibuildwheel_cache.py  repair_linux_wheel.py
sdk/python/src/mxdb/: __init__.py  _binary.py  client.py
sdk/python/tests/: test_client.py
server/process/: main.cc
tests/integration/: test_admin_ops.cc  test_compaction_equivalence.cc  test_end_to_end.cc  test_restore_correctness.cc  test_restore_failure_atomicity.cc  test_write_barriers.cc  test_write_failure_semantics.cc
tests/recovery/: test_checkpoint_recovery.cc
tests/unit/: test_batch_atomicity.cc  test_config.cc  test_docs_contracts.cc  test_engine_lifecycle.cc  test_metadata.cc  test_temporal_semantics.cc  test_wal.cc  test_write_id_concurrency.cc
tools/: benchmark_runner.py
tools/featurectl/: main.cc
